--- a/build.gradle
+++ b/build.gradle
@@ -18,6 +18,7 @@ dependencies {
 	testImplementation ('org.springframework.boot:spring-boot-starter-test'){
 		exclude group: 'org.junit.vintage',module:'jinit-vintage-engine'
 	}
+    testImplementation 'junit:junit:4.13.1'
 }
 
 tasks.named('test') {
